[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/topdown-shooter/PNG/Man Blue/manBlue_gun.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.8994, 21.8468 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.77817, 0.707104 )
shape = SubResource( 1 )

[node name="manBlue_gun" type="Sprite" parent="."]
position = Vector2( 7.28244, 0.427063 )
texture = ExtResource( 1 )

[node name="HurtBlinkTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DropWeaponSpot" type="Position2D" parent="."]
position = Vector2( 0, 4.24264 )

[node name="GunMuzzle" type="Position2D" parent="."]
position = Vector2( 56.922, 9.54594 )

[node name="ShootRateTimer" type="Timer" parent="."]
one_shot = true
